<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/logo_image_description"
            android:src="@drawable/memory_logo"
            tools:src="@drawable/memory_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/menu_title"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance"
            android:textSize="18sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/new_game_button"
            android:textAlignment="center"
            android:onClick="showGameActivity"/>

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/instruction_button"
            android:textAlignment="center"
            android:onClick="showInstructionActivity"/>

        <Button
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/exit_button"
            android:textAlignment="center"
            android:onClick="exitApp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>